.infrastructure/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: your-app.example.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: todoapp
                port:
                  number: 80
